src/objects/Health__c.object
<CustomObject>
    <fields>
        <fullName>Body_Mass_Index__c</fullName>
        <formula>(Weight__c /((( Height_feet__c * 12)+ Height_inches__c ) ^ 2))*703</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Body Mass Index</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_from_BMI__c</fullName>
        <formula>ABS( Body_Mass_Index__c - Goal_Body_Mass_Index__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance from BMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Goal_Body_Mass_Index__c</fullName>
        <formula>(Goal_Weight__c /((( Height_feet__c * 12)+ Height_inches__c ) ^ 2))*703</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal Body Mass Index</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Weight__c</fullName>
        <label>Goal Weight</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height_feet__c</fullName>
        <label>Height (feet)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height_inches__c</fullName>
        <label>Height (inches)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heroku_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heroku Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Weigh_In__c</fullName>
        <label>Last Weigh In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Health</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2net_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Qualcomm 2net Guid - https://developer.qualcomm.com/mobile-development/create-connected-experiences/wireless-health-2net/2net-connect-api/authenticating-2net</description>
        <inlineHelpText>Is this user registered with Qualcomm 2net</inlineHelpText>
        <label>2net Registered</label>
        <type>Checkbox</type>
    </fields>
    <label>Health</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Health Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Health</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>